--- a/example/DQNAgent_train.yml
+++ b/example/DQNAgent_train.yml
@@ -7,7 +7,7 @@ alias:
   save_prefix: &save_prefix DQN
   initial_parameter: &initial_parameter null
 
-name: DQNAgent
+typename: DQNAgent
 args:
   recorder_config:
     memory_size: 1000000
@@ -27,26 +27,27 @@ args:
       terminal:
         dtype: bool
 
+  model_config:
+    model_file: vanilla_dqn
+    initial_parameter: *initial_parameter
+    input_channel: *stack
+    input_height: *height
+    input_width: *width
+
   q_network_config:
-    model_config:
-      name: vanilla_dqn
-      initial_parameter: *initial_parameter
-      input_channel: *stack
-      input_height: *height
-      input_width: *width
     q_learning_config:
       discount_rate: 0.99
       # reward is clipped between the following min and max
       min_reward: -1.0
       max_reward: 1.0
     cost_config:
-      name: SSE2
+      typename: SSE2
       args:
         # error between predicted Q value and target Q value is clipped by the following min and max
         min_delta: -1.0
         max_delta: 1.0
     optimizer_config:
-      name: NeonRMSProp
+      typename: NeonRMSProp
       args:
         decay: 0.95
         epsilon: 0.000001
