--- a/luchador/nn/model/data/vanilla_dqn_bn.yml
+++ b/luchador/nn/model/data/vanilla_dqn_bn.yml
@@ -1,79 +1,78 @@
 model_type: Sequential
 input:
-  dtype: uint8
-  shape: {input_shape}
-  name: state
+  typename: Input
+  args:
+    dtype: uint8
+    shape: {input_shape}
+    name: state
 layer_configs:
   - scope: layer0/preprocessing
-    layer:
-      name: TrueDiv
-      args:
-        denom: 255
+    typename: TrueDiv
+    args:
+      denom: 255
   - scope: layer1/conv2D
-    layer:
-      name: Conv2D
-      args:
-        n_filters: 32
-        filter_width: 8
-        filter_height: 8
-        strides: 4
-        padding: valid
-        with_bias: False
+    typename: Conv2D
+    args:
+      n_filters: 32
+      filter_width: 8
+      filter_height: 8
+      strides: 4
+      padding: valid
+      with_bias: False
   - scope: layer1/BN
-    layer: &BN
-      name: BatchNormalization
-      args:
-        learn: True
-        decay: 0.999
+    typename: BatchNormalization
+    args:
+      learn: True
+      decay: 0.999
   - scope: layer1/ReLU
-    layer:
-      name: ReLU
+    typename: ReLU
   - scope: layer2/conv2D
-    layer:
-      name: Conv2D
-      args:
-        n_filters: 64
-        filter_width: 4
-        filter_height: 4
-        strides: 2
-        padding: valid
-        with_bias: False
+    typename: Conv2D
+    args:
+      n_filters: 64
+      filter_width: 4
+      filter_height: 4
+      strides: 2
+      padding: valid
+      with_bias: False
   - scope: layer2/BN
-    layer: *BN
+    typename: BatchNormalization
+    args:
+      learn: True
+      decay: 0.999
   - scope: layer2/ReLU
-    layer:
-      name: ReLU
+    typename: ReLU
   - scope: layer3/conv2D
-    layer:
-      name: Conv2D
-      args:
-        filter_width: 3
-        filter_height: 3
-        n_filters: 64
-        strides: 1
-        padding: valid
-        with_bias: False
+    typename: Conv2D
+    args:
+      filter_width: 3
+      filter_height: 3
+      n_filters: 64
+      strides: 1
+      padding: valid
+      with_bias: False
   - scope: layer3/BN
-    layer: *BN
+    typename: BatchNormalization
+    args:
+      learn: True
+      decay: 0.999
   - scope: layer3/ReLU
-    layer:
-      name: ReLU
+    typename: ReLU
   - scope: layer4/flatten
-    layer:
-      name: Flatten
+    typename: Flatten
   - scope: layer5/dense
-    layer:
-      name: Dense
-      args:
-        n_nodes: 512
-        with_bias: False
+    typename: Dense
+    args:
+      n_nodes: 512
+      with_bias: False
   - scope: layer5/BN
-    layer: *BN
+    typename: BatchNormalization
+    args:
+      learn: True
+      decay: 0.999
   - scope: layer5/ReLU
-    layer:
-      name: ReLU
+    typename: ReLU
   - scope: layer6/dense
-    layer:
-      name: Dense
-      args:
-        n_nodes: {n_actions}
+    typename: Dense
+    args:
+      n_nodes: {n_actions}
