--- a/tests/integration/data/layer/batch_normalization_4d_learn.yml
+++ b/tests/integration/data/layer/batch_normalization_4d_learn.yml
@@ -2,7 +2,7 @@ run:
   iteration: 10
 
 layer:
-  name: BatchNormalization
+  typename: BatchNormalization
   args:
     scale: 2.0
     offset: 0.5
