--- a/example/vanilla_dqn.yml
+++ b/example/vanilla_dqn.yml
@@ -1,8 +1,10 @@
 model_type: Sequential
 input:
-  dtype: uint8
-  shape: {input_shape}
-  name: state
+  typename: Input
+  args:
+    dtype: uint8
+    shape: {input_shape}
+    name: state
 layer_configs:
   - scope: layer0/preprocessing
     typename: TrueDiv
