Download ALE roms automatically (#210)
* Run ALE download automatically

* Update README

--- a/circle.yml
+++ b/circle.yml
@@ -11,9 +11,7 @@ stages:
       - type: checkout
       - type: shell
         name: Install Luchador
-        command: |
-          python setup.py download_ale --output-dir=luchador/env/ale/rom
-          pip install -e .
+        command: pip install -e .
       - type: shell
         name: Print Version
         command: |
