--- a/example/DQNAgent_test.yml
+++ b/example/DQNAgent_test.yml
@@ -1,4 +1,5 @@
 alias:
+  memory_size: &memory_size 25000
   width: &width 84
   height: &height 84
   stack: &stack 4
@@ -9,23 +10,15 @@ alias:
 
 typename: DQNAgent
 args:
+  record_config:
+    sort_frequency: -1
+    stack: *stack
+
   recorder_config:
-    memory_size: 100
-    batch_size: *batch
-    buffer_config:
-      state:
-        shape:
-          - *height
-          - *width
-        dtype: uint8
-        stack: *stack
-        transition: 2
-      action:
-        dtype: uint8
-      reward:
-        dtype: float32
-      terminal:
-        dtype: bool
+    buffer_size: 10
+    sample_size: *batch
+    priority: 0.0
+    importance: 0.0
 
   model_config:
     model_file: example/vanilla_dqn.yml
