--- a/tests/integration/data/dqn/DQNAgent_train.yml
+++ b/tests/integration/data/dqn/DQNAgent_train.yml
@@ -41,6 +41,9 @@ args:
           decay: 0.95
           epsilon: 0.000001
           learning_rate: 0.00025
+      clip_grads:
+        max_value: 10
+        min_value: -10
 
   saver_config:
     output_dir: *save_dir
