--- a/tests/integration/data/layer/batch_normalization_4d_not_learn.yml
+++ b/tests/integration/data/layer/batch_normalization_4d_not_learn.yml
@@ -1,14 +1,22 @@
-run:
-  iteration: 10
-
-layer:
-  typename: BatchNormalization
+model:
+  typename: Sequential
   args:
-    scale: 2.0
-    offset: 0.5
-    learn: False
-    decay: 0.999
+    input_config:
+      typename: Input
+      args:
+        shape: {input_shape}
+        name: input
+    layer_configs:
+      - typename: BatchNormalization
+        args:
+          scale: 2.0
+          offset: 0.5
+          learn: False
+          decay: 0.999
 
 input: input_randn_3x5_offset_3.h5
 
 parameter: parameter_bn.h5
+
+run:
+  iteration: 10
