--- a/tests/integration/data/layer/sigmoid.yml
+++ b/tests/integration/data/layer/sigmoid.yml
@@ -1,4 +1,12 @@
-layer:
-  typename: Sigmoid
+model:
+  typename: Sequential
+  args:
+    input_config:
+      typename: Input
+      args:
+        shape: {input_shape}
+        name: input
+    layer_configs:
+      - typename: Sigmoid
 
 input: input_randn_5x3.h5
