--- a/luchador/nn/util/data/vanilla_dqn.yml
+++ b/luchador/nn/util/data/vanilla_dqn.yml
@@ -7,49 +7,54 @@ args:
       shape: {input_shape}
       name: state
   layer_configs:
-    - scope: layer0/preprocessing
-      typename: TrueDiv
+    - typename: TrueDiv
       args:
         denom: 255
-    - scope: layer1/conv2D
-      typename: Conv2D
+        name: layer0/preprocessing
+    - typename: Conv2D
       args:
         n_filters: 32
         filter_width: 8
         filter_height: 8
         strides: 4
         padding: valid
-    - scope: layer1/ReLU
-      typename: ReLU
-    - scope: layer2/conv2D
-      typename: Conv2D
+        name: layer1/conv2D
+    - typename: ReLU
+      args:
+        name: layer1/ReLU
+    - typename: Conv2D
       args:
         n_filters: 64
         filter_width: 4
         filter_height: 4
         strides: 2
         padding: valid
-    - scope: layer2/ReLU
-      typename: ReLU
-    - scope: layer3/conv2D
-      typename: Conv2D
+        name: layer2/conv2D
+    - typename: ReLU
+      args:
+        name: layer2/ReLU
+    - typename: Conv2D
       args:
         filter_width: 3
         filter_height: 3
         n_filters: 64
         strides: 1
         padding: valid
-    - scope: layer3/ReLU
-      typename: ReLU
-    - scope: layer4/flatten
-      typename: Flatten
-    - scope: layer5/dense
-      typename: Dense
+        name: layer3/conv2D
+    - typename: ReLU
+      args:
+        name: layer3/ReLU
+    - typename: Flatten
+      args:
+        name: layer4/flatten
+    - typename: Dense
       args:
         n_nodes: 512
-    - scope: layer5/ReLU
-      typename: ReLU
-    - scope: layer6/dense
-      typename: Dense
+        name: layer5/dense
+    - typename: ReLU
+      args:
+        name: layer5/ReLU
+    - typename: Dense
       args:
         n_nodes: {n_actions}
+        name: layer6/dense
