--- a/tests/integration/data/layer/batch_normalization_4d_not_learn.yml
+++ b/tests/integration/data/layer/batch_normalization_4d_not_learn.yml
@@ -13,6 +13,7 @@ model:
           offset: 0.5
           learn: False
           decay: 0.999
+          name: ''
 
 input: input_randn_3x5_offset_3.h5
 
